bat.bool1.diff21.Diff21.scala.error
Erreur de compilation :
Diff21:6: error: Boolean does not take parameters
  else (n>=21){
              ^